# learn-gen-ai

./: README.md  fine-tune-deep-seek.py
all-in-one/embedding/text-embedding/final/: Text-Embedding.ipynb
all-in-one/gemini/: prompt_with_gemini.py
all-in-one/lang-chain/: requirements.txt
all-in-one/lang-chain/gemini/: 02-basic.py  03_graph-rag.py  Quantum-Entaglement.md  blockchain technology.md
all-in-one/lang-chain/perpexity/: 02-template.py  03-pipeline-deepseek.py  03_graph-rag.py  04-chain.py  05-chat-models.py  06-few-shorts.py  07-langchain-rag.md  readme.md
crew_learn/Do-Not-Refer/: pyproject.toml  report.md
crew_learn/Do-Not-Refer/src/examples/: (45) WhatsApp.html  L6_collaboration_financial_analysis.ipynb  customer_suport.py  event_planner.py  ideal_customer_profile-icp.py  research_article.py
crew_learn/crew_lean/: .gitignore  README.md  pyproject.toml
crew_learn/crew_lean/src/crew_lean/: __init__.py  crew.py  main.py
crew_with_local_llm/: README.md
crew_with_local_llm/src/crew_with_local_llm/: crew.py  main.py
ocr-processor/: .gitignore  custom_extrator.py  ocr_processor.py  readme.md  requirements.txt
youtube-summarizer/: .gitignore  app.py  readme.md  requirements.txt  transcript.txt  youtube_summarizer.py
youtube-summarizer/outputs/: summary.md  summary.txt  transcript.txt
